<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8187.4" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="bV5-sg-pNj">
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8151.3"/>
    </dependencies>
    <scenes>
        <!--Kalinda-->
        <scene sceneID="PqD-vD-6SC">
            <objects>
                <viewControllerPlaceholder storyboardName="Kalinda" id="fq8-0q-AJY" sceneMemberID="viewController"/>
                <placeholder placeholderIdentifier="IBFirstResponder" id="J1M-2c-Ma7" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="73" y="803"/>
        </scene>
        <!--Preferences-->
        <scene sceneID="P2E-y9-0GC">
            <objects>
                <viewControllerPlaceholder storyboardName="Preferences" id="f3y-0G-2y0" sceneMemberID="viewController"/>
                <placeholder placeholderIdentifier="IBFirstResponder" id="4vU-hj-paA" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-437.5" y="803"/>
        </scene>
        <!--Main-->
        <scene sceneID="g4D-ve-5IY">
            <objects>
                <viewController title="Main" id="zMp-Rg-C2f" customClass="MainViewController" customModule="fussyspider" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="LSD-FY-Dcu"/>
                        <viewControllerLayoutGuide type="bottom" id="YyF-AY-oFW"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="lMA-ZS-R4Z">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vsy-ed-V5h">
                                <rect key="frame" x="0.0" y="0.0" width="600" height="556"/>
                                <subviews>
                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="O9I-RZ-Jqx">
                                        <rect key="frame" x="0.0" y="77" width="600" height="479"/>
                                        <color key="backgroundColor" red="0.29172585229999998" green="0.0" blue="0.25832373990000002" alpha="1" colorSpace="calibratedRGB"/>
                                        <color key="separatorColor" cocoaTouchSystemColor="lightTextColor"/>
                                        <color key="sectionIndexColor" cocoaTouchSystemColor="lightTextColor"/>
                                        <color key="sectionIndexBackgroundColor" red="0.29172585229999998" green="0.0" blue="0.25832373990000002" alpha="1" colorSpace="calibratedRGB"/>
                                        <prototypes>
                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="taskRow" id="5FE-Zx-Qcl">
                                                <rect key="frame" x="0.0" y="22" width="600" height="44"/>
                                                <autoresizingMask key="autoresizingMask"/>
                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5FE-Zx-Qcl" id="waj-e1-loU">
                                                    <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <color key="backgroundColor" red="0.29172585229999998" green="0.0" blue="0.25832373990000002" alpha="1" colorSpace="calibratedRGB"/>
                                                </tableViewCellContentView>
                                                <color key="backgroundColor" red="0.50461647730000003" green="0.0" blue="0.47217712169999998" alpha="0.90000000000000002" colorSpace="calibratedRGB"/>
                                                <color key="tintColor" cocoaTouchSystemColor="lightTextColor"/>
                                            </tableViewCell>
                                        </prototypes>
                                        <sections/>
                                    </tableView>
                                </subviews>
                                <color key="backgroundColor" red="0.29172585229999998" green="0.0" blue="0.25832373990000002" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstItem="O9I-RZ-Jqx" firstAttribute="centerY" secondItem="Vsy-ed-V5h" secondAttribute="centerY" id="IK1-W3-CZL"/>
                                    <constraint firstItem="O9I-RZ-Jqx" firstAttribute="leading" secondItem="Vsy-ed-V5h" secondAttribute="leading" id="Mab-O0-sfA"/>
                                    <constraint firstItem="O9I-RZ-Jqx" firstAttribute="top" secondItem="Vsy-ed-V5h" secondAttribute="top" id="inv-U0-lre"/>
                                    <constraint firstItem="O9I-RZ-Jqx" firstAttribute="centerX" secondItem="Vsy-ed-V5h" secondAttribute="centerX" id="jPC-3S-jiF"/>
                                    <constraint firstAttribute="trailing" secondItem="O9I-RZ-Jqx" secondAttribute="trailing" id="qtn-gJ-qec"/>
                                    <constraint firstAttribute="bottom" secondItem="O9I-RZ-Jqx" secondAttribute="bottom" id="vOu-qc-WLs"/>
                                </constraints>
                            </scrollView>
                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jDx-P1-rP6">
                                <rect key="frame" x="0.0" y="556" width="600" height="44"/>
                                <items>
                                    <barButtonItem title="tag filter" id="XPR-oc-Ugi">
                                        <color key="tintColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                                        <connections>
                                            <segue destination="Zvo-kV-kup" kind="show" id="ZbU-FO-r3J"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem systemItem="add" id="b3m-rU-NRg">
                                        <color key="tintColor" cocoaTouchSystemColor="lightTextColor"/>
                                        <connections>
                                            <segue destination="Gvv-oA-S0r" kind="show" id="zaB-2C-Qby"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="sy8-w1-gqo">
                                        <color key="tintColor" red="0.50461647730000003" green="0.0" blue="0.47217712169999998" alpha="0.90000000000000002" colorSpace="calibratedRGB"/>
                                    </barButtonItem>
                                    <barButtonItem title="birb!" id="q2d-l9-Y41">
                                        <color key="tintColor" cocoaTouchSystemColor="lightTextColor"/>
                                        <connections>
                                            <segue destination="fq8-0q-AJY" kind="show" id="ZtB-0a-C2V"/>
                                        </connections>
                                    </barButtonItem>
                                </items>
                                <color key="barTintColor" red="0.29172585229999998" green="0.0" blue="0.25832373990000002" alpha="1" colorSpace="calibratedRGB"/>
                            </toolbar>
                        </subviews>
                        <color key="backgroundColor" red="0.29172585229999998" green="0.0" blue="0.25832373990000002" alpha="1" colorSpace="calibratedRGB"/>
                        <color key="tintColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                        <constraints>
                            <constraint firstItem="Vsy-ed-V5h" firstAttribute="leading" secondItem="lMA-ZS-R4Z" secondAttribute="leading" id="3c9-8n-bWF"/>
                            <constraint firstItem="Vsy-ed-V5h" firstAttribute="top" secondItem="lMA-ZS-R4Z" secondAttribute="top" id="RB9-zq-tr6"/>
                            <constraint firstItem="Vsy-ed-V5h" firstAttribute="trailing" secondItem="jDx-P1-rP6" secondAttribute="trailing" id="XJJ-tK-tPc"/>
                            <constraint firstItem="jDx-P1-rP6" firstAttribute="bottom" secondItem="YyF-AY-oFW" secondAttribute="top" id="YC4-SA-GFs"/>
                            <constraint firstItem="Vsy-ed-V5h" firstAttribute="leading" secondItem="jDx-P1-rP6" secondAttribute="leading" id="pfJ-e0-BTz"/>
                            <constraint firstItem="jDx-P1-rP6" firstAttribute="top" secondItem="Vsy-ed-V5h" secondAttribute="bottom" id="qXC-n7-aK6"/>
                            <constraint firstAttribute="trailing" secondItem="Vsy-ed-V5h" secondAttribute="trailing" id="sjQ-QG-7U0"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="fussyspider" id="dUO-gs-jKE" userLabel="fussyspider">
                        <barButtonItem key="leftBarButtonItem" title="Prefs" id="m6x-IK-6nd">
                            <color key="tintColor" red="0.29172585229999998" green="0.0" blue="0.25832373990000002" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <segue destination="f3y-0G-2y0" kind="show" id="Lnl-ZY-7uw"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Lse-TA-W1X">
                            <color key="tintColor" red="0.29172585229999998" green="0.0" blue="0.25832373990000002" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <segue destination="hwT-qE-ZYn" kind="show" id="r75-AG-dgb"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
                        <outlet property="taskTable" destination="O9I-RZ-Jqx" id="6k9-p2-qOA"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="AUv-WO-dqf" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-189" y="261"/>
        </scene>
        <!--tagSelect-->
        <scene sceneID="Oig-rS-2w0">
            <objects>
                <viewControllerPlaceholder storyboardName="Tags" referencedIdentifier="tagSelect" id="Zvo-kV-kup" sceneMemberID="viewController"/>
                <placeholder placeholderIdentifier="IBFirstResponder" id="PM3-eb-PlB" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-55" y="803"/>
        </scene>
        <!--tagEdit-->
        <scene sceneID="qeR-At-V3Y">
            <objects>
                <viewControllerPlaceholder storyboardName="Tags" referencedIdentifier="tagEdit" id="Gvv-oA-S0r" sceneMemberID="viewController"/>
                <placeholder placeholderIdentifier="IBFirstResponder" id="qNA-yr-JUO" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-189" y="803"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="huZ-JY-0VC">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="bV5-sg-pNj" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="VWA-8U-dAe">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="zMp-Rg-C2f" kind="relationship" relationship="rootViewController" id="Xb3-9s-PX4"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="uMX-MC-3g2" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-1305" y="261"/>
        </scene>
        <!--Task-->
        <scene sceneID="PAk-4c-4dj">
            <objects>
                <viewControllerPlaceholder storyboardName="Task" id="hwT-qE-ZYn" sceneMemberID="viewController"/>
                <placeholder placeholderIdentifier="IBFirstResponder" id="RRi-at-J9i" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-303.5" y="803"/>
        </scene>
    </scenes>
</document>
