...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="zuZ-hQ-X2d" id="qVv-Rw-IEg"/>
                            <outlet property="delegate" destination="zuZ-hQ-X2d" id="CGI-KV-lPx"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Select Tags" id="aiB-uu-d9r">
                        <barButtonItem key="leftBarButtonItem" systemItem="done" id="o41-3L-Ttt">
                            <color key="tintColor" red="0.29172585229999998" green="0.0" blue="0.25832373990000002" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <segue destination="rUW-Fm-Mt6" kind="show" id="wm7-K6-6kj"/>
                            </connections>
                        </barButtonItem>
...
                            <constraint firstItem="mV9-ZU-e0W" firstAttribute="top" secondItem="jV6-X2-b1V" secondAttribute="bottom" constant="17" id="sRe-Ig-f0O"/>
                            <constraint firstItem="4zA-vn-1Ro" firstAttribute="top" secondItem="zO9-ms-D7F" secondAttribute="bottom" constant="21" id="tLd-Fj-jfm"/>
                            <constraint firstItem="Hlf-JS-1Rr" firstAttribute="leading" secondItem="0Ee-ax-qfb" secondAttribute="leadingMargin" id="ulR-vY-CBO"/>
                            <constraint firstItem="4zA-vn-1Ro" firstAttribute="leading" secondItem="0Ee-ax-qfb" secondAttribute="leadingMargin" id="zdX-eQ-XR1"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Edit Tag" id="5ZF-Er-afi">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="dyk-QS-pzr">
                            <color key="tintColor" red="0.50461647730000003" green="0.0" blue="0.47217712169999998" alpha="0.90000000000000002" colorSpace="calibratedRGB"/>
                            <connections>
                                <segue destination="rUW-Fm-Mt6" kind="show" id="HWn-mA-S5f"/>
                            </connections>
                        </barButtonItem>
...
