...
                            <constraint firstItem="1wH-Fl-mfe" firstAttribute="top" secondItem="Qg3-PM-eIK" secondAttribute="bottom" constant="8" symbolic="YES" id="rZu-zM-wkJ"/>
                            <constraint firstItem="MCc-Ev-3vn" firstAttribute="top" secondItem="edx-JS-fXd" secondAttribute="bottom" constant="8" symbolic="YES" id="xfv-BW-Hgb"/>
                            <constraint firstItem="1wH-Fl-mfe" firstAttribute="leading" secondItem="Dfy-n8-cca" secondAttribute="trailing" constant="8" symbolic="YES" id="zSK-WF-JXj"/>
                        </constraints>
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Edit Task" id="c6n-Jp-WCy">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="lH7-zp-4ag">
                            <color key="tintColor" red="0.29172585229999998" green="0.0" blue="0.25832373990000002" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <segue destination="ig4-eX-xGm" kind="show" id="Mm1-WC-jnf"/>
                            </connections>
                        </barButtonItem>
...
