...
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
    </dependencies>
    <scenes>
        <!--Preferences-->
        <scene sceneID="bnP-gN-SLc">
            <objects>
                <viewController id="W8f-o7-g8y" customClass="PrefsViewController" customModule="fussyspider" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="3Ld-jl-LU8"/>
                        <viewControllerLayoutGuide type="bottom" id="l0t-M9-PvT"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="qex-aa-Ip3">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
...
                                <color key="textColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <pickerView contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AfF-Xf-B3I">
                                <rect key="frame" x="64" y="294" width="473" height="88"/>
                                <animations/>
                                <accessibility key="accessibilityConfiguration" label="Theme selector"/>
                            </pickerView>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lyJ-Wh-fuG">
                                <rect key="frame" x="488" y="94" width="51" height="31"/>
                                <animations/>
                                <accessibility key="accessibilityConfiguration" label="Finished Tasks Toggle"/>
                                <color key="onTintColor" red="1" green="0.00083137051919999995" blue="0.80710363829999998" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                                <color key="thumbTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <connections>
                                    <action selector="showCompletedValueChange:" destination="W8f-o7-g8y" eventType="valueChanged" id="xbr-pK-9Ye"/>
                                </connections>
                            </switch>
                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="kKw-hM-3Hi">
                                <rect key="frame" x="62" y="231" width="477" height="31"/>
                                <animations/>
                                <accessibility key="accessibilityConfiguration" label="Frequency slider"/>
                                <color key="minimumTrackTintColor" red="1" green="0.00083137051919999995" blue="0.80710363829999998" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                                <color key="thumbTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            </slider>
                        </subviews>
                        <animations/>
                        <color key="backgroundColor" red="0.29172585229999998" green="0.0" blue="0.25832373990000002" alpha="1" colorSpace="calibratedRGB"/>
...
                            <constraint firstItem="kKw-hM-3Hi" firstAttribute="leading" secondItem="KGQ-5E-BxN" secondAttribute="leading" id="vZ7-mG-Q7U"/>
                            <constraint firstItem="AfF-Xf-B3I" firstAttribute="trailing" secondItem="349-5U-kc1" secondAttribute="trailing" id="w5M-9m-ml1"/>
                            <constraint firstItem="kKw-hM-3Hi" firstAttribute="top" secondItem="ACK-Mj-uqw" secondAttribute="bottom" constant="8" symbolic="YES" id="x9d-p3-zaO"/>
                            <constraint firstItem="lyJ-Wh-fuG" firstAttribute="leading" secondItem="66G-Rx-xNd" secondAttribute="leading" id="yWD-40-wzJ"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Preferences" id="ss8-Kt-khU">
                        <barButtonItem key="leftBarButtonItem" systemItem="done" id="1Z1-zk-le4">
                            <color key="tintColor" red="0.29172585229999998" green="0.0" blue="0.25832373990000002" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <segue destination="oeK-NR-FrE" kind="show" id="9Zd-Mc-m3k"/>
                            </connections>
                        </barButtonItem>
...
